# pullow

frontend/: package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  axios-conf.js  index.css
frontend/src/common/: jwtCommon.js
price-prediction-api/: .env  Dockerfile  README.md  main.py  pyproject.toml
price-prediction-api/app/core/: auth.py  config.py  main.py
price-prediction-api/app/routers/: model.py
price-prediction-api/app/schemas/: model.py  response.py
price-prediction-api/model/: dataset.csv  model.h5  model.py  pashalife.ipynb
pullow-api/: ApplicationDbContext.cs  Dockerfile  Program.cs  Readme.md  WeatherForecast.cs  appsettings.Development.json  pullow-api.csproj  pullow-api.http  pullow-api.sln
pullow-api/Authentication/: ApplicationUser.cs  AuthenticationController.cs
pullow-api/Controllers/: GoalController.cs  UserController.cs  WeatherForecastController.cs
pullow-api/Entities/: ApplicationUserGoal.cs  Goal.cs  UserGoal.cs
pullow-api/Migrations/: 20240302025927_Initial.Designer.cs  20240302025927_Initial.cs  20240302030620_AddUserFullName.Designer.cs  20240302030620_AddUserFullName.cs  20240302070856_AddCachedExpectedPrice.Designer.cs  20240302070856_AddCachedExpectedPrice.cs  20240302080013_AddGrossSalary.Designer.cs  20240302080013_AddGrossSalary.cs  ApplicationDbContextModelSnapshot.cs
pullow-api/Properties/: launchSettings.json
vault-api/: Dockerfile  README.md  requirements.txt
vault-api/app/: auth.py  config.py  main.py
vault-client/: index.html
vault-client/UsbKeyApi/: Program.cs
(+19 files in other folders)
