[tool.poetry]
name = "price-prediction-api"
version = "0.1.0"
description = ""
authors = ["Vugar Abdulali <vabdulaliyev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.110.0"
pydantic-settings = "^2.2.1"
uvicorn = "^0.27.1"
pandas = "^2.2.1"
requests = "^2.31.0"
scikit-learn = "^1.4.1.post1"
tensorflow-io-gcs-filesystem = "0.27.0"
tensorflow = "~2.10"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
